--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 	<form>
 		<h3 class="title-form mt-3">Auto Posting on telegram channel</h3>
+		<h4><a href="https://t.me/autopost_uz">Telegram channel</a></h4>
 		<textarea class="form-control mt-3" cols="40" rows="5" id="message"></textarea>
 		<p class="text-center">
 			<button onclick="getAndSendMessage()" class="btn btn-dark mt-3">Send</button>
